[tool.poetry]
name = "request_rate_limiter"
version = "0.1.0"
description = ""
authors = ["Fedor Chervyakov <fchervyakov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-httpserver = "^1.0.6"
coverage = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
